# osc2024

./: .clang-format  .gdbinit  .gitignore  .gitmodules  .initgdb  Cargo.toml  Dockerfile  Makefile  README.md  README.org  Readme.md  a.out  backup.c  backup2.c  command.c  communicate.py  compile_flags.txt  compile_user_program.sh  config.txt  et --hard HEAD^  initramfs.cpio  initramfs.cpio2  initramfs.cpio  kernel8.elf  kernel8.img  kernel_sender.py  link.ld  linker.ld  mailbox.c  main.c  makefile  mbox.c  mbox.h  miniuart.c  new_start_S.txt  obj.txt  objdimp.txt  objdump.sh  pack.sh  readme.md  (+14 more)
bootloader/: .clangd  Cargo.toml  Makefile  README.md  boot.S  bootloader.elf  bootloader.img  create_initramfs.sh  kernel.ld  kernel8.elf  kernel8.img  kernel_transmitter.py  link.ld  linker.ld  main.c  new_script.sh  obj.txt  pyproject.toml  record.txt  shell.c  start.S  start.s  uart.c  upload.c  upload.py  upload_kernel.sh  utils.c
bootloader/include/: loadimg.h  mbox.h  my_string.h  shell.h  uart0.h  utils.h  utli.h
bootloader/src/: arrsting.rs  boot.S  boot.rs  boot.s  bsp.rs  console.rs  cpu.rs  driver.rs  linker.ld  loadimg.c  main.c  main.rs  mbox.c  my_math.c  my_string.c  panic.rs  panic_wait.rs  power.rs  shell.rs  start.S  start.s  stdio.rs  uart.c  uart0.c  uart1.c  uart_load.rs  utli.c
bootloader/src/bsp/: mbox.rs  rpi3.rs
bootloader/src/cpu/: boot.rs  boot.s  uart.rs
bootloader/src/mbox/: null_mbox.rs
bootloader/tools/: pyproject.toml
crates/device/: Cargo.toml
crates/device/src/: common.rs  driver.rs  gpio.rs  lib.rs  mailbox.rs  mini_uart.rs  watchdog.rs
crates/uartload/: Cargo.toml  Makefile  build.rs  uartload.ld
crates/uartload/src/: boot.s  drivers.rs  main.rs
crates/uartpush/: Cargo.toml  README.md
crates/uartpush/src/: main.rs
imageUploader/: Makefile  pyproject.toml
imageUploader/imageuploader/: main.py
kernel/: .clangd  Cargo.toml  Makefile  Makefile_debug  README.md  build.rs  cpio.c  cpio.h  exception.c  exception.h  exception_vectors.S  fdt.c  initramfs.c  initramfs.h  interrupt.c  interrupt.h  kernel8.img  linker.ld  main.c  shell.c  shell.h  start.S  timer.c  timer.h
kernel/include/: cpio.h  fdt.h  initrd.h  mbox.h  shell.h  uart.h  utils.h
kernel/include/command/: file.h  fireware.h  other.h
kernel/src/: allocator.rs  arrsting.rs  bsp.rs  cpio.c  cpu.rs  driver.rs  fdt.c  fdt.rs  initrd.c  kernel.S  kernel.rs  kernel.s  linker.ld  main.c  main.rs  mbox.c  mbox.rs  memory.rs  mmu.rs  os.rs  panic.rs  panic_wait.rs  power.rs  print.rs  scheduler.rs  shell.c  shell.rs  syscall.rs  thread.rs  timer.rs  uart.c
kernel/src/allocator/: buddy.rs  bump.rs  config.rs  dynamic.rs  memory.rs  mod.rs  utils.rs
kernel/src/bsp/: mod.rs  rpi3.rs
kernel/src/command/: file.c  fireware.c  other.c
kernel/src/commands/: buddy.rs  cat.rs  echo.rs  exec.rs  hello.rs  help.rs  ls.rs  mod.rs  reboot.rs  set_time_out.rs
kernel/src/console/: mod.rs
kernel/src/cpu/: boot.rs  boot.s  device_tree.rs  mailbox.rs  mmu.rs  reboot.rs  registers.rs  uart.rs
kernel/src/device_tree/: dt.rs  dt_header.rs  dt_prop.rs  dt_string.rs  dt_struct.rs  mod.rs
kernel/src/dtb/: dt.rs  fdt.rs  mem_rsvmap.rs  mod.rs  strings.rs  utils.rs
kernel/src/exception/: context_switch.S  exception_table.S  mod.rs  trap_frame.rs
kernel/src/fs/: cpio.rs  cpiofs.rs  devfs.rs  fs.org  init_ram_fs.rs  mod.rs  tmpfs.rs  util.rs  utils.rs  vfs.rs
kernel/src/interrupt/: interrupt.s  mod.rs  timer.rs
kernel/src/kernel_thread/: mod.rs  switch.s
kernel/src/mbox/: mod.rs  (+1 more)
(+4509 files in other folders)
