[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true


[features]
default = []
bsp_rpi3 = []

# specify bin
[[bin]]
name = "bootloader"
path = "src/main.rs"

[dependencies]
driver = { path = "../driver" }


# Platform specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = {version = "9.x.x"}

