[tool.poetry]
name = "imageuploader"
version = "0.1.0"
description = ""
authors = ["Tsung-Che Lu <tsclu@cs.nctu.edu.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyserial = "^3.5"
progress = "^1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
