[package]
name = "kernel"
version = "0.1.0"
authors = ["HelloHomework"]
edition = "2021"

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
bench = false

[lib]
test = false

#[toolchain]
#channel = "nightly"

[features]
default = ["tock-registers"]

[workspace]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aarch64-cpu = "9.4.0"
tock-registers = { version = "0.8.x", default-features = false, features = ["register_types"], optional = true }
