[package]
name = "uartload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device = { version = "0.1.0", path = "../device" }
panic-wait = { version = "0.1.0", path = "../panic-wait" }
small-std = { version = "0.1.0", path = "../small-std" }
